--- a/2_2/index.html
+++ b/2_2/index.html
@@ -15,7 +15,7 @@
         <form action="" class="form">
             <div class="form--row">
                 <label for="imie">Podaj imię:</label>
-                <input type="text" name="imie" class="text" data-error="Podaj imie.">
+                <input type="text" name="imie" class="text" data-error="Podaj imię.">
                 <div class="error--message hidden"></div>
             </div>
             <div class="form--row">            
