--- a/2_2/index.html
+++ b/2_2/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-    <div class="container" novalidate>
-        <form action="" class="form">
+    <div class="container">
+        <form action="" class="form" novalidate>
             <div class="form--row">
                 <label for="imie">Podaj imię:</label>
                 <input type="text" name="imie" class="text" data-error="Podaj imię.">
