--- a/2_3/index.html
+++ b/2_3/index.html
@@ -12,6 +12,10 @@
 <body>
 
     <div class="container">
+        <div class="counter-container">
+            <span id="counter" class="counter">- -</span>
+            <button id="btn">Odliczaj</button>
+        </div>
     </div>
 
     <script src="js/scripts.js"></script>
