--- a/2_3/index.html
+++ b/2_3/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="counter-container">
             <span id="counter" class="counter">- -</span>
-            <button id="btn">Odliczaj</button>
+            <button id="btn" class="btn">Odliczaj</button>
         </div>
     </div>
 
